# smart_book_library

./: AGENTS.md  README.md  docker-compose.yml  main.py  pyproject.toml  smart_book_library.code-workspace
.github/: copilot-instructions.md
agents/: Dockerfile  main.py  pyproject.toml
agents/agents/: __init__.py  configuration.py  embeddings.py  models.py  output_models.py  telemetry.py
agents/agents/prompts/: author_info.txt  book_description.txt
api/: Dockerfile  main.py  pyproject.toml
api/api/: db.py  dispatcher.py  google_books.py
api/api/logger/: __init__.py
api/api/models/: __init__.py  google_responses.py  isbn.py
api/tests/: conftest.py  test_agentic_integration.py  test_db.py  test_dispatcher.py  test_google_books.py  test_isbn.py
db/: init.sql
frontend/: Dockerfile  main.py  pyproject.toml
frontend/sql/: get_author_embeddings.sql  get_authors.sql  get_book_embeddings.sql  get_books.sql
ollama/: Dockerfile
