[project]
name = "agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "ollama>=0.6.2",
    "pydantic>=2.13.4",
    "pydantic-ai-slim[duckduckgo]>=1.97.0",
    "pydantic-ai[anthropic,google,ollama,openai]>=1.97.0",
    "pydantic-settings>=2.14.1",
    "uvicorn>=0.47.0",
]
