[project]
name = "frontend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "pandas>=3.0.3",
    "plotly>=6.7.0",
    "psycopg[binary]>=3.3.4",
    "streamlit>=1.57.0",
]

[dependency-groups]
dev = [
    "python-dotenv>=1.2.2",
]
